--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+jupyter = "^1.1.1"
+transformers = "^4.45.2"
+datasets = "^3.0.1"
 
 
 [build-system]
